--- a/index.html
+++ b/index.html
@@ -7,22 +7,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-
 <body>
-   <script src="./assets/js/main.js"></script>
-  <div class="zero"></div>
-  <h1 class="one">To-do list</h1>
-  <img class="four" src="./assets/img/Group 34.png" alt="ytfy">
-<div class="two"></div>
-<div class="three"></div>
-<img class="five" src="./assets/img/Group 52 (2).png" alt="sdgs">
-<div class="six"></div>
-<img class="seven" src="./assets/img/Group 41.png" alt="asdead">
-
-
-
-
-
+   <script src="./assets/js/main.js"></script> 
+   <div class="zero"></div>
+   <h1 class="aysun">To-do list</h1>
+   
+   <div class="one"></div>
+<img class="two" src="./assets/img/Group 34.png" alt="sfeew">
+<img class="three" src="./assets/img/Group 52.png" alt="">
+<div class="four"></div>
+<img class="five" src="./assets/img/Group 41.png" alt="fth">
+<input class="six" type="text">
 </body>
 </html>
-
