javasi yarimciq hazirdi

--- a/index.html
+++ b/index.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    </link>
 </head>
+
 <body>
-   <script src="./assets/js/main.js"></script> 
-   <div class="zero"></div>
-   <h1 class="aysun">To-do list</h1>
-   
-   <div class="one"></div>
-<img class="two" src="./assets/img/Group 34.png" alt="sfeew">
-<img class="three" src="./assets/img/Group 52.png" alt="">
-<div class="four"></div>
-<img class="five" src="./assets/img/Group 41.png" alt="fth">
-<input class="six" type="text">
+    <div class="one">
+        <div class="two"></div>
+        <div id="myDIV" class="header">
+            <div class="three">
+                <h2 style="margin: 10px; margin-left: 100px;">To Do List</h2>
+            </div>
+            <input class="hisse2" type="text" id="myInput" placeholder="Metni daxil edin...">
+            <br>
+            <div class="four">
+                <ul id="myUL">
+
+                </ul>
+            </div>
+            <div class="five">
+                <div onclick="newElement()" class="addBtn">
+                    <button class="six">+</button>
+                    <a>Elave et</a></div>
+            </div>
+        </div>
+        <div class="four">
+            <ul id="myUL">
+
+            </ul>
+        </div>
+    </div>
+    <script src="./assets/js/main.js"></script>
+
 </body>
+
 </html>
