--- a/index.html
+++ b/index.html
@@ -1,43 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-    </link>
+<link rel="stylesheet" href="./assets/css/style.css">
 </head>
-
 <body>
-    <div class="one">
-        <div class="two"></div>
-        <div id="myDIV" class="header">
-            <div class="three">
-                <h2 style="margin: 10px; margin-left: 100px;">To Do List</h2>
+    <div class="wrapper">
+        <div class="container">
+            <div class="yellow"></div>
+            <div class="heading">
+                <h1 class="heading-text">To-Do List</h1>
             </div>
-            <input class="hisse2" type="text" id="myInput" placeholder="Metni daxil edin...">
-            <br>
-            <div class="four">
-                <ul id="myUL">
-
-                </ul>
+            <div class="sort">
+                <img class="sortup" src="assets/image/Group 91.png">
+                <img class="sortdown" src="assets/image/Group 73.png">
             </div>
-            <div class="five">
-                <div onclick="newElement()" class="addBtn">
-                    <button class="six">+</button>
-                    <a>Elave et</a></div>
+            <div class="text-area">
+                <input type="text" class="input-text">
+                
             </div>
-        </div>
-        <div class="four">
-            <ul id="myUL">
-
-            </ul>
+            <div class="add">
+                <button class="addbtn">Add</button>
+            </div>
+            <div class="todos" id="list">
+                <div class="todo-item-container">
+                    
+                </div>
+            </div>
         </div>
     </div>
-    <script src="./assets/js/main.js"></script>
-
+    <link rel="stylesheet" href="assets/style/style.css">
+  <script src="./assets/js/main.js"></script>
 </body>
-
 </html>
