--- a/index.html
+++ b/index.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-<link rel="stylesheet" href="./assets/css/style.css">
+    <title>Todo List App</title>
+    <link rel="stylesheet" href="mystyle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="./assets/css/style.css" rel="stylesheet">
+
 </head>
+
 <body>
-    <div class="wrapper">
+    <div class="mainContainer">
+
+        <h1>To-Do List</h1>
+        <div class="input_div">
+            <input type="text" class="input" placeholder="What do you want to do...">
+        </div>
+
         <div class="container">
-            <div class="yellow"></div>
-            <div class="heading">
-                <h1 class="heading-text">To-Do List</h1>
-            </div>
-            <div class="sort">
-                <img class="sortup" src="assets/image/Group 91.png">
-                <img class="sortdown" src="assets/image/Group 73.png">
-            </div>
-            <div class="text-area">
-                <input type="text" class="input-text">
-                
-            </div>
-            <div class="add">
-                <button class="addbtn">Add</button>
-            </div>
-            <div class="todos" id="list">
-                <div class="todo-item-container">
-                    
-                </div>
-            </div>
+            <!--  <div class="item">
+                <input type="text" class="item_input"  disabled>
+                <button class="removeButton">Remove</button>
+            </div> -->
+        </div>
+        <div class="buttonContent">
+            <button class="addButton">
+                <span>
+                    <i class="fas fa-plus">+</i>
+                </span>
+                <span>
+                    Add
+                </span>
+            </button>
         </div>
     </div>
-    <link rel="stylesheet" href="assets/style/style.css">
-  <script src="./assets/js/main.js"></script>
+    <script type="text/javascript" src="main.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
+
 </html>
