--- a/index.html
+++ b/index.html
@@ -3,42 +3,42 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo List App</title>
-    <link rel="stylesheet" href="mystyle.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="./assets/css/style.css" rel="stylesheet">
-
+    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    </link>
 </head>
 
 <body>
-    <div class="mainContainer">
-
-        <h1>To-Do List</h1>
-        <div class="input_div">
-            <input type="text" class="input" placeholder="What do you want to do...">
+    <div class="veb1">
+        <div class="hisse"></div>
+        <div id="myDIV" class="header">
+            <div class="hisse5">
+                <h2 style="margin:5px;">To Do List</h2>
+                <div>
+                    <img class="sekil" src="./assets/img/Group 74 (1).png" alt="foto">
+                    <img  class="sekil1" src="./assets/img/Group 90.png" alt0="foto1">
+                </div>
+            </div>
+            <input class="hisse2" type="text" id="myInput" placeholder="Metni daxil edin...">
+            <br>
+            <div class="elave">
+                <ul id="myUL">
+           
+                </ul>
+            </div>
         </div>
-
-        <div class="container">
-            <!--  <div class="item">
-                <input type="text" class="item_input"  disabled>
-                <button class="removeButton">Remove</button>
-            </div> -->
-        </div>
-        <div class="buttonContent">
-            <button class="addButton">
-                <span>
-                    <i class="fas fa-plus">+</i>
-                </span>
-                <span>
-                    Add
-                </span>
-            </button>
+        <br>
+        <div class="hisse3">
+            <div onclick="newElement()" class="addBtn">
+                <button class="plas">+</button>
+                <a>Elave et</a>
+            </div>
         </div>
     </div>
-    <script type="text/javascript" src="main.js"></script>
     <script src="./assets/js/main.js"></script>
+
 </body>
 
 </html>
